# melpo

./: .gitignore  Pipfile  README.md  pyproject.toml
backend/: .flaskenv  .gitignore  README.md  __init__.py  __main__.py  api.py  db.sqlite  db.sqlite3  models.py  pyproject.toml
backend/app/: __main__.py  api.py  db.sqlite3
backend/melpo_api/: __init__.py  __main__.py  api.py  models.py  scan.py
backend/migrations/versions/: 0f3bd0af218c_.py  0f72aebe07a0_.py  4ba9a53e9d7c_.py  fdaa0164b6b8_.py
webapp/: package.json
webapp/public/: index.html
webapp/src/: App.vue  main.js
webapp/src/components/: ArtistList.vue
