[tool.poetry]
name = "melpo-api"
version = "0.0.1"
description = ""
authors = ["Arkelis <guillaume.fayard@pycolore.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
marshmallow-sqlalchemy = "^0.16.1"
flask-sqlalchemy = "^2.3"
flask-migrate = "^2.4"
flask-marshmallow = "^0.10.0"
python-dotenv = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
