[tool.poetry]
name = "melpo-api"
version = "0.0.2.post1"
description = "API serving Melpo's frontend."
authors = ["Arkelis <guillaume.fayard@pycolore.fr>"]
license="GPL-3.0+"
readme = "README.md"
repository="https://github.com/Arkelis/melpo"
homepage="https://github.com/Arkelis/melpo"
keywords=["music", "api", "flask"]


[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
marshmallow-sqlalchemy = "^0.16.1"
flask-sqlalchemy = "^2.3"
flask-migrate = "^2.4"
flask-marshmallow = "^0.10.0"
python-dotenv = "^0.10.1"
pytaglib = "^1.4"
flask-cors = "^3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
